--- a/body.css
+++ b/body.css
@@ -35,8 +35,7 @@ body{
 	margin-top: 1px;
 	margin-bottom: 1px;
 	text-align: center;
-	margin-left: 46px;
-	margin-right : 46px;
+	margin-left: 0.5%;
 	background-color:#1c1f1f;
 	width: 370px;
 	border: 1px;
