--- a/body.css
+++ b/body.css
@@ -1,4 +1,3 @@
-/* font-family: 'Comic Neue', cursive; */
 .collapse {
 	font-family: 'Comic Neue', cursive;
 	font-size: 14px;
@@ -10,6 +9,9 @@
 
 img {
 	border-radius: 20px;
+	margin: auto;
+  	width: 50%;
+	padding: 10px;
 }
 .navbar-brand {
 	display: inline-block;
@@ -28,16 +30,10 @@ body{
 .container {
 	font-family: 'Source Sans Pro', sans-serif;
 	color: antiquewhite;
-	padding-left: 10px;
-	pointer-events: none;
-	padding-top: 2px;
-	padding-bottom : 20px;
-	margin-top: 1px;
-	margin-bottom: 1px;
+	margin: auto;
+    width: 70%;
+    padding: 10px;
 	text-align: center;
-	margin-left: 0.5%;
 	background-color:#1c1f1f;
-	width: 370px;
-	border: 1px;
-	border-color: azure;
 }
+
