--- a/css/anime_pages.css
+++ b/css/anime_pages.css
@@ -115,3 +115,11 @@ body{
 	color: antiquewhite;
 	font-size: 25px;
 }
+.fa {
+	padding: 20px;
+	font-size: 30px;
+	width: 30px;
+	text-align: center;
+	text-decoration: none;
+	border-radius: 50%;
+  }
